# booking-platform

./: .gitignore  Makefile  Readme.md  docker-compose.yaml
.github/: script.sh
lib/booking_api/: .env.example  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  Readme.md  docker-compose.yaml  go.mod  go.sum  recipe.json  reflex.conf  schema.sql
lib/booking_api/cmd/api/: main.go
lib/booking_api/config/: config.go
lib/booking_api/gateways/tableAPI/: tableAPI.go
lib/booking_api/gateways/venueAPI/: venueAPI.go
lib/booking_api/migrations/: 1_initialize_schema.down.sql  1_initialize_schema.up.sql  2_add_venue_column.down.sql  2_add_venue_column.up.sql
lib/booking_api/migrations/2021-01-29-221315_init/: up.sql
lib/booking_api/migrations/2021-03-21-165148_add_name/: down.sql  up.sql
lib/booking_api/models/: booking.go  bookingFilter.go  bookingQuery.go  date.go  errors.go  models.go  newBooking.go  repository.go  slot.go  table.go  tableClient.go  venue.go  venueClient.go
lib/booking_api/models/mock/: repository.go  tableClient.go  venueClient.go
lib/booking_api/repositories/fakeRepository/: repository.go
lib/booking_api/repositories/postgres/: dbClient.go  migrate.go  postgres.go
lib/booking_api/services/: createBooking.go  createBooking_test.go  services_suite_test.go
lib/booking_api/src/: main.rs  models.rs  postgres.rs  schema.rs  service.rs  table.rs  venue.rs
lib/booking_api/tests/: integration_test.go
lib/booking_api/tests/.snapshots/: TestBookingQuery  TestBookingQueryCreateBooking  TestBookingQueryCreateBookingGetBookingByDate
(+274 files in other folders)
