[package]
name = "booking_api"
version = "0.1.0"
authors = ["cobbinma <cobbinma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = { path = "./.protobuf" }
tonic = { version = "0.4.0", features = ["tls"]}
tokio = { version = "1.1.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
async-trait = "0.1.42"
chrono = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }