[package]
name = "booking_api"
version = "0.1.0"
authors = ["cobbinma <cobbinma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = { path = "./.protobuf" }
tonic = { version = "0.4.0", features = ["tls"]}
tokio = { version = "1.1.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
async-trait = "0.1.42"
chrono = "0.4"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
femme = "2.1.1"
log = "0.4.14"
alcoholic_jwt = "1.0.0"
reqwest = "0.9.22"
dotenv = "0.15.0"
diesel = { version = "1.4.4", features = ["postgres", "chrono", "r2d2", "uuidv07"] }
diesel_migrations = "1.4.0"
serde = "1.0.123"